--- a/languages/dilone-coming-soon.pot
+++ b/languages/dilone-coming-soon.pot
@@ -1,7 +1,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: AV Coming Soon\n"
+"Project-Id-Version: Dilone Coming Soon\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-13 09:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
